fixed text spacing

--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ html, body {
 
     #hero-mobile #info-mobile {
         display: flex;
+        justify-content: space-between;
         gap: 14vw;
         align-items: center;
         color: #fff;
